--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,7 @@ body {
 }
 
 .container--headbox {
-  background-image: linear-gradient(to right, #2f303a66 100%, #2f303a66 100%), url(".../images/headerbg.jpg");
+  background-image: linear-gradient(to right, #2f303a66 100%, #2f303a66 100%), url("../images/headerbg.jpg");
   background-color: #2f303a;
   height: 600px;
   display: flex;
