--- a/scss/components/_head-box.scss
+++ b/scss/components/_head-box.scss
@@ -1,7 +1,7 @@
 //HEAD-BOX STYLES//
 .container--headbox {
     background-image: linear-gradient(to right, #2f303a66 100%, #2f303a66 100%),
-        url(".../images/headerbg.jpg");
+        url("../images/headerbg.jpg");
     background-color: $background-color-main;
     height: 600px;
     display: flex;
