--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,3 +10,4 @@
 @import "./components/footer";
 @import "./components/buttons";
 @import "./components/grid";
+@import "./components/mobile-menu";
