--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ body {
 }
 
 .container {
-  max-width: 1600px;
+  max-width: 1200px;
   display: flex;
   margin: auto;
   justify-content: center;
@@ -60,18 +60,21 @@ body {
   letter-spacing: 0.02em;
 }
 
-.header {
+.container--header {
   width: 100%;
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  background-color: #ffffff;
+  padding: 16px 15px;
+}
+
+.header {
   border-bottom: 1px solid #ececec;
 }
 
 .menu {
   display: flex;
-  margin-left: 93px;
-  margin-right: 301px;
 }
 
 .menu__link {
@@ -96,59 +99,162 @@ body {
   font-weight: 700;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  margin: 24px 0 25px 215px;
 }
 
 .logo--decor {
   color: #2196f3;
 }
 
-.container--headbox {
-  background-image: linear-gradient(to right, #2f303a66 100%, #2f303a66 100%), url("../images/headerbg.jpg");
-  background-color: #2f303a;
-  height: 600px;
+@media screen and (max-width: 767px) {
+  .menu,
+  .address {
+    visibility: hidden;
+    position: absolute;
+  }
+}
+
+@media screen and (min-width: 787px) and (max-width: 1199px) {
+  .address {
+    display: flex;
+    flex-direction: column;
+    align-items: right;
+    row-gap: 10px;
+  }
+}
+
+@media screen and (min-width: 1199px) {
+  .address {
+    flex-direction: row;
+    align-items: center;
+    column-gap: 10px;
+  }
+}
+
+.container--header {
+  padding-bottom: 25px;
+}
+
+.menu-toggle {
+  height: 40px;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
+.menu-toggle__svg:hover {
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: #2196f3;
+}
+
+.head-box__container {
+  padding: 118px 0;
+  margin: 0 auto;
+  color: #ffffff;
+  text-transform: uppercase;
+  text-align: center;
+  background-size: cover;
+  background-position: 50% 50%, 50% 50%;
+  background-image: linear-gradient(to top, #2f303a66, #2f303a66), url(../images/mobile/headerbg.jpg);
   display: flex;
   flex-direction: column;
-  margin: auto;
-  justify-content: center;
+  gap: 1.875rem;
   align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 1;
 }
 
 .head-box__title {
-  font-size: 44px;
+  margin: 0 auto 30px;
+  font-size: 26px;
   line-height: 1.36;
   letter-spacing: 0.06em;
   color: #ffffff;
   font-weight: 900;
   text-transform: uppercase;
-  max-width: 696px;
+  max-width: 385px;
   text-align: center;
 }
 
-.button {
+.head-box__button {
   border: none;
   background-color: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  padding: 10px 42px;
-  display: flex;
-  align-items: center;
-  margin-top: 30px;
+  padding: 16px 48px;
+  margin-right: auto;
+  margin-left: auto;
   cursor: pointer;
-}
-
-.button:hover {
-  transform: scale(1.1);
-  background-color: #56b3ff;
-  transition-duration: 250ms;
-}
-
-.button__text {
   color: #ffffff;
   font-size: 16px;
   font-weight: 700;
   line-height: 1.875;
   letter-spacing: 0.06em;
+}
+
+.head-box__button:hover {
+  transform: scale(1.1);
+  background-color: #56b3ff;
+  transition-duration: 250ms;
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .container {
+    max-width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+  .head-box__container {
+    background-image: linear-gradient(to top, #2f303a66, #2f303a66), url(../images/tablet/headerbg.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
+  .head-box__container {
+    max-width: 1600px;
+    padding: 200px 0;
+    background-image: linear-gradient(to top, #2f303a66, #2f303a66), url(../images/headerbg.jpg);
+  }
+  .head-box__title {
+    max-width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+    font-weight: 900;
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px) and (max-width: 1199px), screen and (min-resolution: 192dpi) and (min-width: 768px) and (max-width: 1199px), screen and (min-resolution: 2dppx) and (min-width: 768px) and (max-width: 1199px) {
+  .head-box__container {
+    background-image: linear-gradient(to top, #2f303a66, #2f303a66), url(../images/tablet/headerbgx2.jpg);
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px), screen and (min-resolution: 192dpi) and (max-width: 767px), screen and (min-resolution: 2dppx) and (max-width: 767px) {
+  .head-box__container {
+    background-image: linear-gradient(to top, #2f303a66, #2f303a66), url(../images/mobile/headerbgx2.jpg);
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (min-resolution: 192dpi) and (min-width: 1200px), screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+  .head-box__container {
+    background-image: linear-gradient(to top, #2f303a66, #2f303a66), url(../images/headerbgx2.jpg);
+  }
 }
 
 /* ===== Modal box styles =====*/
@@ -170,6 +276,7 @@ body {
   z-index: 3;
   width: 100%;
   height: 100%;
+  overflow: auto;
   background-color: rgba(0, 0, 0, 0.2);
   transition: transform 500ms linear, visibility 500ms linear, opacity 500ms linear;
 }
@@ -182,13 +289,13 @@ body {
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  width: 100%;
+  max-width: 570px;
+  position: relative;
   width: 528px;
-  height: 581px;
   background-color: #fff;
+  margin: 25% auto;
+  border: 1px solid #888;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
@@ -213,6 +320,7 @@ body {
 .modal__form {
   display: flex;
   flex-direction: column;
+  padding-bottom: 40px;
 }
 
 .modal__p {
@@ -377,16 +485,15 @@ body {
 /* ===== End Modal box styles =====*/
 /* ===== Adv styles ===== */
 .adv {
-  display: flex;
-  align-items: center;
-  width: 1200px;
+  padding: 0;
+  margin: 60px auto;
 }
 
-.adv__item:not(:last-child) {
-  margin-right: 30px;
+.adv__list {
+  gap: 30px;
 }
 
-.adv__icon {
+.adv__icon-box {
   display: flex;
   width: 270px;
   height: 120px;
@@ -394,16 +501,17 @@ body {
   justify-content: center;
   align-items: center;
   border-radius: 4px;
-  margin-bottom: 30px;
 }
 
 .adv__header {
+  text-align: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.142;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #212121;
+  padding: 30px 0px 10px 0px;
 }
 
 .adv__desc {
@@ -412,12 +520,64 @@ body {
   line-height: 1.714;
   letter-spacing: 0.03em;
   color: #757575;
+  max-width: 100%;
+  padding-bottom: 30px;
+}
+
+@media screen and (min-width: 360px) and (max-width: 767px) {
+  .adv {
+    align-items: center;
+    padding: 0 15px;
+  }
+  .adv__icon-box {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .adv {
+    align-items: center;
+  }
+  .adv__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+  }
+  .adv__item {
+    flex-basis: calc(50% - 15px);
+    width: 100%;
+  }
+  .adv__header {
+    text-transform: uppercase;
+    text-align: left;
+  }
+  .adv__icon-box {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .adv {
+    max-width: 1200px;
+  }
+  .adv__list {
+    display: flex;
+    width: 100%;
+  }
+  .adv__header {
+    text-align: left;
+  }
 }
 
 /* ===== End Adv styles ===== */
 /* ===== We do styles ===== */
 .we-do {
   width: 1200px;
+}
+
+.we-do--container {
+  margin-bottom: 94px;
 }
 
 .we-do__header {
@@ -427,47 +587,62 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
-  margin-bottom: 50px;
+  padding-bottom: 50px;
 }
 
 .we-do__list {
   display: flex;
+  column-gap: 30px;
 }
 
-.we-do__item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.we-do__card {
+.we-do__item {
+  display: flex;
+  justify-content: flex-end;
   position: relative;
 }
 
-.we-do__card-desc {
+.we-do__card {
   position: absolute;
-  display: flex;
-  width: 370px;
+  width: 100%;
+  bottom: 0;
   height: 70px;
-  top: 224px;
+  background-color: rgba(47, 48, 58, 0.8);
+  display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.we-do__card-desc {
   font-weight: 700;
   font-size: 14px;
-  line-height: 1.14;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
-  background: rgba(47, 48, 58, 0.8);
+}
+
+@media screen and (max-width: 1199px) {
+  .we-do--container {
+    display: none;
+  }
 }
 
 /* ===== End we do styles ===== */
 /* ===== Team styles ===== */
 .container--team {
   background-color: #f5f4fa;
-  margin-top: 94px;
+}
+
+.team__picture {
+  width: 100%;
+}
+
+.team__img {
+  width: 100%;
 }
 
 .team__header {
-  padding-top: 94px;
+  padding-top: 60px;
   padding-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
@@ -477,22 +652,26 @@ body {
 }
 
 .team__list {
+  column-gap: 30px;
+}
+
+.team__item {
+  background-color: #fff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
   display: flex;
-  gap: 30px;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .team__card {
-  margin: 0;
-  max-width: 270px;
-  max-height: 428px;
-  background: #fff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-
-.team__card-desc {
-  padding-top: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 30px;
+  margin-bottom: 16px;
 }
 
 .team__card-name {
@@ -511,11 +690,15 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   color: #757575;
-  margin-top: 10px;
+}
+
+.team__social-list {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 10px;
 }
 
 .team__social-items {
-  margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -524,7 +707,6 @@ body {
   gap: 10px;
   width: 206px;
   padding-top: 16px;
-  padding-bottom: 18px;
 }
 
 .team__social-button {
@@ -548,10 +730,58 @@ body {
   fill: #ffffff;
 }
 
+.team__social-icon {
+  width: auto;
+  height: 20px;
+}
+
+@media screen and (min-width: 360px) and (max-width: 767px) {
+  .team__title {
+    padding-bottom: 30px;
+  }
+  .team__list {
+    column-gap: 30px;
+  }
+  .team__item {
+    padding-bottom: 24px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team__title {
+    padding-bottom: 30px;
+  }
+  .team__list {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 30px;
+    justify-content: center;
+  }
+  .team__item {
+    flex-basis: calc(50% - 15px);
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__list {
+    display: flex;
+  }
+  .team__img {
+    max-width: 279px;
+  }
+  .team__item {
+    width: 100%;
+  }
+  .team__social_items {
+    padding-bottom: 18px;
+  }
+}
+
 /* ===== End team styles ===== */
 /* ===== Clients styles ===== */
 .clients {
-  padding-top: 94px;
+  padding: 60px 0;
 }
 
 .clients__header {
@@ -560,14 +790,16 @@ body {
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
-  padding-bottom: 50px;
+  padding-bottom: 30px;
   margin: 0;
   color: #212121;
 }
 
 .clients__list {
   display: flex;
-  margin-bottom: 94px;
+  row-gap: 30px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .clients__item {
@@ -590,11 +822,58 @@ body {
   cursor: pointer;
 }
 
+@media screen and (min-width: 360px) and (max-width: 767px) {
+  .clients {
+    padding: 60px 0px;
+  }
+  .clients__header {
+    padding-bottom: 30px;
+  }
+  .clients__item {
+    flex-basis: calc(100% / 3 - 15px);
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .clients {
+    padding: 60px 0px;
+  }
+  .clients__item {
+    flex-basis: calc(100% / 3 - 30px);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding: 94px 0;
+    max-width: 1200px;
+  }
+  .clients__header {
+    padding-bottom: 50px;
+  }
+  .clients__list {
+    display: flex;
+    row-gap: 30px;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+  }
+  .clients__item {
+    flex-basis: 00%;
+    min-width: calc((100% / 6) - 30px);
+    min-height: 92px;
+  }
+}
+
 /* ===== End clients styles ===== */
 /* ===== Footer styles ===== */
 .footercontent {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  gap: 60px;
+  text-align: center;
 }
 
 .footer {
@@ -608,6 +887,7 @@ body {
   font-size: 26px;
   line-height: 1.192;
   letter-spacing: 0.03em;
+  margin-bottom: 20px;
 }
 
 .footer__link {
@@ -643,11 +923,6 @@ body {
 }
 
 /*-----------------------------*/
-.footer-social {
-  padding-left: 70px;
-  margin-right: 78px;
-}
-
 .footer-social__header {
   font-weight: 700;
   font-size: 14px;
@@ -685,8 +960,10 @@ body {
 /* ---------------------------------- */
 .footer-newsletter {
   display: flex;
-  align-items: flex-end;
+  flex-wrap: wrap;
+  align-items: center;
   gap: 12px;
+  justify-content: center;
 }
 
 .footer-newsletter__header {
@@ -749,15 +1026,47 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-/* ===== End Footer styles ===== */
-/* ===== Button Styles ===== */
-.buttons__list {
-  display: flex;
-  justify-content: center;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footercontent {
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    margin: 0px auto;
+    justify-content: center;
+  }
+  .footer-newsletter {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
-.buttons__item:not(:last-child) {
-  margin-right: 8px;
+@media screen and (min-width: 1200px) {
+  .footercontent {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+  }
+  .footer-newsletter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .footer-newsletter__btn {
+    margin-top: 34px;
+  }
+}
+
+/* ===== End Footer styles ===== */
+/* ===== Button Styles ===== */
+.buttons {
+  padding: 0 15px;
+}
+
+.buttons__list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
 }
 
 .buttons__button {
@@ -796,7 +1105,8 @@ body {
 
 .grid__item {
   position: relative;
-  width: 370px;
+  overflow: hidden;
+  margin-bottom: 30px;
 }
 
 .grid__item:hover, .grid__item:focus {
@@ -838,8 +1148,15 @@ body {
   color: #ffffff;
 }
 
+.card__picture {
+  width: 100%;
+}
+
 .card__image {
   display: block;
+  max-width: 450px;
+  width: 100%;
+  height: auto;
 }
 
 .card__info {
@@ -871,6 +1188,158 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (min-width: 360px) and (max-width: 479px) {
+  .grid__list {
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .grid__list {
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .grid__list {
+    display: flex;
+    column-gap: 30px;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .grid__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .card__image {
+    max-width: 370px;
+  }
+}
+
 /* ===== End Projects Grid Styles ===== */
+@media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 32px;
+  background-color: #fff;
+  z-index: 999;
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  color: #000000;
+}
+
+.mobile-menu__lists {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+}
+
+.mobile-menu {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  row-gap: 32px;
+  align-self: flex-start;
+}
+
+.mobile-menu__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  color: #000000;
+  text-decoration: none;
+}
+
+.mobile-menu__link:hover, .mobile-menu__link:focus {
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #2196f3;
+}
+
+.mobile-menu__link--blue {
+  color: #2196f3;
+}
+
+.mobile-menu__contacts-list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 32px;
+}
+
+.mobile-menu__contacts-elem {
+  text-decoration: none;
+}
+
+.mobile-menu__email {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  color: #757575;
+}
+
+.mobile-menu__email:hover, .mobile-menu__email:focus {
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #2196f3;
+  cursor: pointer;
+}
+
+.mobile-menu__telephone {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+  color: #2196f3;
+  cursor: pointer;
+}
+
+.mobile-menu__telephone:hover, .mobile-menu__telephone:focus {
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #2196f3;
+  cursor: pointer;
+}
+
+.mobile-menu__social-list {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 32px;
+}
+
+.mobile-menu__social-link {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.17;
+  color: #2196f3;
+  cursor: pointer;
+}
+
+.mobile-menu__social-link-line {
+  color: #212121;
+}
 
 /*# sourceMappingURL=main.css.map */
