--- a/scss/components/_adv.scss
+++ b/scss/components/_adv.scss
@@ -1,16 +1,14 @@
 /* ===== Adv styles ===== */
 .adv {
-    display: flex;
-    align-items: center;
-    width: 1200px;
+    padding: 0;
+    margin: 60px auto;
 
-    &__item {
-        &:not(:last-child) {
-            margin-right: 30px;
-        }
+    &__list {
+        gap: 30px
     }
 
-    &__icon {
+
+    &__icon-box {
         display: flex;
         width: 270px;
         height: 120px;
@@ -18,16 +16,17 @@
         justify-content: center;
         align-items: center;
         border-radius: 4px;
-        margin-bottom: 30px;
     }
 
     &__header {
+        text-align: center;
         font-weight: 700;
         font-size: 14px;
         line-height: 1.142;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: $font-color-headers;
+        padding: 30px 0px 10px 0px;
     }
 
     &__desc {
@@ -36,7 +35,64 @@
         line-height: 1.714;
         letter-spacing: $letter-spacing-all;
         color: $font-color-contact;
+        max-width: 100%;
+        padding-bottom: 30px;
     }
 }
+
+@media screen and (min-width: 360px) and (max-width: 767px) {
+    .adv {
+        align-items: center;
+        padding: 0 15px;
+
+        &__icon-box {
+            width: 100%;
+        }
+    }
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .adv {
+        align-items: center;
+
+        &__list {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            width: 100%;
+        }
+
+        &__item {
+            flex-basis: calc(50% - 15px);
+            width: 100%;
+        }
+
+        &__header {
+            text-transform: uppercase;
+            text-align: left;
+        }
+
+        &__icon-box {
+            width: 100%;
+        }
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .adv {
+        max-width: 1200px;
+
+        &__list {
+            display: flex;
+            width: 100%;
+        }
+
+        &__header {
+            text-align: left;
+        }
+    }
+}
+
 
 /* ===== End Adv styles ===== */
