--- a/scss/components/_clients.scss
+++ b/scss/components/_clients.scss
@@ -1,6 +1,6 @@
 /* ===== Clients styles ===== */
 .clients {
-    padding-top: 94px;
+    padding: 60px 0;
 
     &__header {
         font-weight: 700;
@@ -8,14 +8,17 @@
         line-height: 1.16;
         text-align: center;
         letter-spacing: $letter-spacing-all;
-        padding-bottom: 50px;
+        padding-bottom: 30px;
         margin: 0;
         color: $font-color-headers;
     }
 
     &__list {
         display: flex;
-        margin-bottom: 94px;
+        // column-gap: 30px;
+        row-gap: 30px;
+        flex-wrap: wrap;
+        justify-content: center;
     }
 
     &__item {
@@ -36,6 +39,56 @@
             fill: $icon-background-color;
             border-color: $icon-background-color;
             cursor: pointer;
+        }
+    }
+}
+
+@media screen and (min-width: 360px) and (max-width: 767px) {
+    .clients {
+        padding: 60px 0px;
+
+        &__header {
+            padding-bottom: 30px;
+        }
+
+        &__item {
+            flex-basis: calc(100% / 3 - 15px);
+        }
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .clients {
+        padding: 60px 0px;
+
+        &__item {
+            flex-basis: calc(100% / 3 - 30px);
+        }
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .clients {
+        padding: 94px 0;
+        max-width: 1200px;
+
+        &__header {
+            padding-bottom: 50px;
+        }
+
+        &__list {
+            display: flex;
+            // column-gap: 30px;
+            row-gap: 30px;
+            flex-wrap: wrap;
+            justify-content: center;
+            width: 100%;
+        }
+
+        &__item {
+            flex-basis: 00%;
+            min-width: calc((100% / 6) - 30px);
+            min-height: 92px;
         }
     }
 }
