--- a/scss/components/_head-box.scss
+++ b/scss/components/_head-box.scss
@@ -1,51 +1,136 @@
 //HEAD-BOX STYLES//
-.container--headbox {
-    background-image: linear-gradient(to right, #2f303a66 100%, #2f303a66 100%),
-        url("../images/headerbg.jpg");
-    background-color: $background-color-main;
-    height: 600px;
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    justify-content: center;
-    align-items: center;
-}
+.head-box {
+    &__container {
+        padding: 118px 0;
+        margin: 0 auto;
+        color: $font-color-white;
+        text-transform: uppercase;
+        text-align: center;
+        background-size: cover;
+        background-position: 50% 50%, 50% 50%;
+        background-image: linear-gradient(to top, #2f303a66, #2f303a66),
+            url(../images/mobile/headerbg.jpg);
+        display: flex;
+        flex-direction: column;
+        gap: 1.875rem;
+        align-items: center;
+        justify-content: center;
 
-.head-box__title {
-    font-size: 44px;
-    line-height: 1.36;
-    letter-spacing: $letter-spacing-main-title;
-    color: $font-color-white;
-    font-weight: 900;
-    text-transform: uppercase;
-    max-width: 696px;
-    text-align: center;
-}
-
-.button {
-    border: none;
-    background-color: $font-color-blue;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    padding: 10px 42px;
-
-    display: flex;
-    align-items: center;
-    margin-top: 30px;
-    cursor: pointer;
-
-    &:hover {
-        transform: scale(1.1);
-        background-color: #56b3ff;
-        transition-duration: 250ms;
+        width: 100%;
+        height: 100%;
+        position: relative;
+        z-index: 1;
     }
 
-    &__text {
+    &__title {
+        margin: 0 auto 30px;
+        font-size: 26px;
+        line-height: 1.36;
+        letter-spacing: $letter-spacing-main-title;
+        color: $font-color-white;
+        font-weight: 900;
+        text-transform: uppercase;
+        max-width: 385px;
+        text-align: center;
+    }
+
+    &__button {
+        border: none;
+        background-color: $font-color-blue;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+        padding: 16px 48px;
+        margin-right: auto;
+        margin-left: auto;
+        cursor: pointer;
         color: $font-color-white;
         font-size: 16px;
         font-weight: 700;
         line-height: 1.875;
         letter-spacing: $letter-spacing-main-title;
+
+
+        &:hover {
+            transform: scale(1.1);
+            background-color: #56b3ff;
+            transition-duration: 250ms;
+        }
+    }
+}
+
+@media screen and (max-width: 380px) {}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+    .container {
+        max-width: 480px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        max-width: 768px;
+    }
+
+    .head-box {
+        &__container {
+            background-image: linear-gradient(to top, #2f303a66, #2f303a66),
+                url(../images/tablet/headerbg.jpg);
+        }
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .container {
+        max-width: 1200px;
+    }
+
+    .head-box {
+        &__container {
+            max-width: 1600px;
+            padding: 200px 0;
+            background-image: linear-gradient(to top, #2f303a66, #2f303a66),
+                url(../images/headerbg.jpg);
+        }
+
+        &__title {
+            max-width: 696px;
+            font-size: 44px;
+            line-height: 1.36;
+            font-weight: 900;
+        }
+    }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px) and (max-width: 1199px),
+screen and (min-resolution: 192dpi) and (min-width: 768px) and (max-width: 1199px),
+screen and (min-resolution: 2dppx) and (min-width: 768px) and (max-width: 1199px) {
+    .head-box {
+        &__container {
+            background-image: linear-gradient(to top, #2f303a66, #2f303a66),
+                url(../images/tablet/headerbgx2.jpg);
+        }
+    }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+screen and (min-resolution: 192dpi) and (max-width: 767px),
+screen and (min-resolution: 2dppx) and (max-width: 767px) {
+    .head-box {
+        &__container {
+            background-image: linear-gradient(to top, #2f303a66, #2f303a66),
+                url(../images/mobile/headerbgx2.jpg);
+        }
+    }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+screen and (min-resolution: 192dpi) and (min-width: 1200px),
+screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+    .head-box {
+        &__container {
+            background-image: linear-gradient(to top, #2f303a66, #2f303a66),
+                url(../images/headerbgx2.jpg);
+        }
     }
 }
 
