--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -25,18 +25,23 @@
     letter-spacing: 0.02em;
 }
 
+.container {
+    &--header {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 16px 15px;
+    }
+}
+
 .header {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    background-color: $font-color-white;
     border-bottom: 1px solid $bordered-header-color;
 }
 
 .menu {
     display: flex;
-    margin-left: 93px;
-    margin-right: 301px;
     @extend %font_style;
 
     &__link {
@@ -81,11 +86,65 @@
     font-weight: 700;
     line-height: 1.19;
     letter-spacing: $letter-spacing-all;
-    margin: 24px 0 25px 215px;
+    // margin: 24px 0 25px 215px;
 
     &--decor {
         color: $font-color-blue;
     }
+}
+
+@media screen and (max-width: 767px) {
+
+    .menu,
+    .address {
+        visibility: hidden;
+        position: absolute;
+    }
+}
+
+@media screen and (min-width: 787px) and (max-width: 1199px) {
+    .address {
+        display: flex;
+        flex-direction: column;
+        align-items: right;
+        row-gap: 10px;
+    }
+}
+
+@media screen and (min-width: 1199px) {
+    .address {
+        flex-direction: row;
+        align-items: center;
+        column-gap: 10px;
+    }
+}
+
+@media screen and (min-width: 1200px) {}
+
+.container {
+    &--header {
+        padding-bottom: 25px;
+    }
+}
+
+.menu-toggle {
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    outline: none;
+}
+
+.menu-toggle__svg:hover {
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: $font-color-blue;
 }
 
 //END HEADER STYLES//
