--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -17,6 +17,7 @@
     z-index: 3;
     width: 100%;
     height: 100%;
+    overflow: auto;
     background-color: rgba(0, 0, 0, 0.2);
     transition: transform 500ms linear, visibility 500ms linear,
         opacity 500ms linear;
@@ -30,13 +31,13 @@
 }
 
 .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 100%;
+    max-width: 570px;
+    position: relative;
     width: 528px;
-    height: 581px;
     background-color: $background-color-body;
+    margin: 25% auto;
+    border: 1px solid #888;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -61,6 +62,7 @@
     &__form {
         display: flex;
         flex-direction: column;
+        padding-bottom: 40px;
     }
 
     &__p {
